add email feature
